--- a/src/components/Component/StarRating/StarRating.css
+++ b/src/components/Component/StarRating/StarRating.css
@@ -1,6 +1,6 @@
 .star-rating {
   display: flex;
-  flex-direction: row-reverse; /* DOM order 5 to 1, visual order 1 to 5 */
+  flex-direction: row-reverse;
   justify-content: flex-end;
   font-size: 1.5em;
   gap: 5px;
